Fixed pony-group not showing, and added space to bottom of mobile

--- a/pages.css
+++ b/pages.css
@@ -1,7 +1,7 @@
 
 .page-nav {
     text-align: center;
-    margin: 100px 0;
+    padding: 100px 0;
 }
 
 .page-nav a {
