--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ hr {
 }
 
 .contact {
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .contact .section-rule {
